Video card border radius transition added on hovering, FIXED - video list horizontal scrolling on desktop view

--- a/public/assets/css/home.scss
+++ b/public/assets/css/home.scss
@@ -3,11 +3,5 @@
 @import "variables";
 
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-  background-color: $theme-color;
+  width: calc(100% - 250px);
 }
